[package]
name = "latte-cli"
description = "A database benchmarking tool for Apache Cassandra and ScyllaDB"
version = "0.43.0-scylladb"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
default-run = "latte"

[[bin]]
name = "latte"
path = "src/main.rs"
required-features = ["cql"]

[[bin]]
name = "latte-alternator"
path = "src/main.rs"
required-features = ["alternator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.0.1"
rmp = "0.8"
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "env"] }
console = "0.15.0"
cpu-time = "1.0.0"
futures = "0.3"
hdrhistogram = "7.1.0"
hytra = "0.1.2"
itertools = "0.13"
jemallocator = "0.5"
lazy_static = "1.4.0"
metrohash = "1.0"
more-asserts = "0.3"
num_cpus = "1.13.0"
once_cell = "1.21"
openssl = "0.10.72"
parse_duration = "2.1.1"
pin-project = "1.1"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend", "full_palette"] }
rand = { version = "0.8", default-features = false, features = ["small_rng", "std"] }
rand_distr = "0.4"
regex = "1.5"
rune = "0.13"
rust_decimal = "1.36"
rust-embed = "8"
scylla = { version = "1.4", features = ["openssl-010", "chrono-04"], optional = true }
search_path = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.17"
status-line = "0.2.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3"
thiserror = "2.0.0"
# NOTE: pin the tokio version to be 1.44.2 to avoid newer versions with performance regression
#       See: https://github.com/tokio-rs/tokio/issues/7744
tokio = { version = "=1.44.2", features = ["rt", "rt-multi-thread", "time", "parking_lot", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
try-lock = "0.2.3"
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2"
aws-sdk-dynamodb = { version = "1.100.0", optional = true }
aws-config = { version = "1.8.11", optional = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.9"
cargo-lock = "11.0.0"
git2 = "0.19"

[dev-dependencies]
assert_approx_eq = "1"
rstest = "0.22"
# NOTE: pin the tokio version to be 1.44.2 to avoid newer versions with performance regression
#       See: https://github.com/tokio-rs/tokio/issues/7744
tokio = { version = "=1.44.2", features = ["rt", "test-util", "macros"] }

[features]
default = ["cql"]
cql = ["scylla"]
alternator = ["aws-config", "aws-sdk-dynamodb"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fetch_extended_version_info)',
] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[package.metadata.deb]
name = "latte"
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """
A database benchmarking tool for Apache Cassandra.
Runs CQL queries in parallel, measures throughput and response times.
Can compute statistical significance of differences between two runs.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/latte", "usr/bin/", "755"],
    ["workloads/basic/*.rn", "/usr/share/latte/workloads/basic/", "644"],
    ["workloads/sai/new/*.rn", "/usr/share/latte/workloads/sai/new/", "644"],
    ["workloads/sai/orig/*.rn", "/usr/share/latte/workloads/sai/orig/", "644"],
    ["README.md", "usr/share/doc/latte/README", "644"],
]
