[package]
name = "latte-cli"
description = "A database benchmarking tool for Apache Cassandra and ScyllaDB"
version = "0.48.0-scylladb"
authors = ["Piotr Kołaczkowski <pkolaczk@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
default-run = "latte"

[[bin]]
name = "latte"
path = "src/main.rs"
required-features = ["cql"]

[[bin]]
name = "latte-alternator"
path = "src/main.rs"
required-features = ["alternator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.11.1"
rmp = "0.8"
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "cargo", "env"] }
console = "0.15.0"
cpu-time = "1.0.0"
futures = "0.3"
hdrhistogram = "7.1.0"
hytra = "0.1.2"
itertools = "0.14"
jemallocator = "0.5"
lazy_static = "1.4.0"
metrohash = "1.0"
more-asserts = "0.3"
num_cpus = "1.13.0"
once_cell = "1.21"
openssl = "0.10.80"
humantime = "2"
pin-project = "1.1"
plotters = { version = "0.3", default-features = false, features = ["line_series", "svg_backend", "full_palette"] }
rand = { version = "0.9.4", default-features = false, features = ["small_rng", "std", "thread_rng"] }
rand_distr = "0.5"
regex = "1.5"
rune = "0.14.2"
rust_decimal = "1.36"
rust-embed = "8"
scylla = { version = "1.6", features = ["openssl-010", "chrono-04"], optional = true }
# Needed because Rust Driver doesn't reexport VectorIterator. After it starts reexporting it,
# this dependency can be removed.
scylla-cql = { version = "1.6", optional = true }
search_path = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
status-line = "0.2.0"
strum = { version = "0.26", features = ["derive"] }
time = "0.3"
thiserror = "2.0.0"
# NOTE: Using tokio_unstable + enable_alt_timer() to work around the timer performance
#       regression in 1.45+. See: https://github.com/tokio-rs/tokio/issues/7744
#       Alt timer PR: https://github.com/tokio-rs/tokio/pull/7467
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "time", "parking_lot", "signal"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
try-lock = "0.2.3"
uuid = { version = "1.1", features = ["v4"] }
walkdir = "2"
aws-sdk-dynamodb = { version = "1.111.0", default-features = false, features = ["default-https-client", "rt-tokio"], optional = true }
aws-config = { version = "1.8.16", optional = true }

[build-dependencies]
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde_json = "1.0"
chrono = "0.4.9"
cargo-lock = "11.0.0"

[dev-dependencies]
assert_approx_eq = "1"
rstest = "0.22"
tokio = { version = "1.52.1", features = ["rt", "test-util", "macros"] }
testcontainers = "0.27"

[features]
default = ["cql"]
cql = ["scylla", "scylla-cql"]
alternator = ["aws-config", "aws-sdk-dynamodb"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(fetch_extended_version_info)',
    'cfg(tokio_unstable)',
] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.dev-opt]
inherits = "dev"
opt-level = 2

[package.metadata.deb]
name = "latte"
maintainer = "Piotr Kołaczkowski <pkolaczk@gmail.com>"
copyright = "2020, Piotr Kołaczkowski <pkolaczk@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """
A database benchmarking tool for Apache Cassandra.
Runs CQL queries in parallel, measures throughput and response times.
Can compute statistical significance of differences between two runs.
"""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/latte", "usr/bin/", "755"],
    ["workloads/basic/*.rn", "/usr/share/latte/workloads/basic/", "644"],
    ["workloads/sai/new/*.rn", "/usr/share/latte/workloads/sai/new/", "644"],
    ["workloads/sai/orig/*.rn", "/usr/share/latte/workloads/sai/orig/", "644"],
    ["README.md", "usr/share/doc/latte/README", "644"],
]

[patch.crates-io]
# Replace vulnerable atty (CVE: potential unaligned read) with a safe stub
# using std::io::IsTerminal (stable since Rust 1.70)
atty = { path = "crates/atty-stub" }
